# raynforest

./: Cargo.toml  README.md
.github/workflows/: audit.yml  rust.yml
examples/: parallel_add.rs  parallel_add.wgsl
src/: buffers.rs  context.rs  indexing.rs  initialization.rs  lib.rs
src/backend/: buffers.rs  device.rs  mod.rs  pipeline.rs  traits.rs  util.rs
src/backend/buffers/: err.rs  mod.rs  slice.rs  view.rs
src/backend/pipeline/: mod.rs
src/backend/pipeline/config/: inner_types.rs  mod.rs
src/shaders/: add.hjson  add.wgsl
