[package]
name = "arraynforest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = [ "derive" ] }
wgpu = "0.15"
log = "0.4"
env_logger = "0.10"
once_cell = "1.17"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
smol = "1.3"
flume = "0.10"
thiserror = "1.0"
