[package]
name = "raynforest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
wgpu = { version = "0.15", features = ["serde", "strict_asserts"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.17"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
smol = "1.3"
thiserror = "1.0"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "1.1"
paste = "1.0"
