[package]
name = "raynforest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
wgpu = { version = "0.20", features = ["serde", "strict_asserts"] }
log = "0.4"
env_logger = { version = "0.11.3", default-features = false }
once_cell = "1.17"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
smol = "2.0"
thiserror = "1.0"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
deser-hjson = "2.2"
paste = "1.0"
